z-index issue fix for header

--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -8,6 +8,7 @@
     width: 100%;
     top: 0;
     box-shadow: 0 0 10px $grey;
+    z-index: 10;
 
     @include xxl {
         display: grid;
